[gd_scene load_steps=6 format=3 uid="uid://dagckwfor2g7i"]

[ext_resource type="Script" path="res://UI/victory_layer.gd" id="1_3naw1"]
[ext_resource type="FontFile" uid="uid://byyn3a32djd0" path="res://Assets/Asap/static/Asap-Bold.ttf" id="2_7f6vr"]
[ext_resource type="Texture2D" uid="uid://b8hc62jsje0j5" path="res://Assets/star.png" id="2_oaov2"]

[sub_resource type="Theme" id="Theme_bfron"]
default_font = ExtResource("2_7f6vr")

[sub_resource type="LabelSettings" id="LabelSettings_5qyp5"]
font_size = 96

[node name="VictoryLayer" type="CanvasLayer"]
script = ExtResource("1_3naw1")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_bfron")

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Victory"
label_settings = SubResource("LabelSettings_5qyp5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StarContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Star1" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/StarContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_oaov2")
expand_mode = 2
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/StarContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_oaov2")
expand_mode = 2
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/StarContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_oaov2")
expand_mode = 2
stretch_mode = 5

[node name="SurvivedLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Survived +1"
horizontal_alignment = 1

[node name="LifeLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "No damage taken +1"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "More than 500 gold unspent +1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="RetryButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Retry"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
